Fixed a few minor things. Formatted the notes into README.md. Added a potentially unnecessary executor.